# ibmq-weakmeasurement-entanglement

./: .gitignore  README.md  pyproject.toml
artifacts/: claims_map.json  metrics.csv  metrics_ibm.csv  metrics_sim.csv  run_manifest.json  summary.md  summary_ibm.md  summary_sim.md
artifacts/ibm_cache/: ibm_jobs.json
docs/: theory.md
notebooks/: walkthrough.ipynb
scripts/: aggregate_ibm_artifacts.py  aggregate_sim_artifacts.py  run_ibm_matrix.py  run_sim_matrix.py
src/: artifact_history.py  circuits.py  data.py  design.py  helpers.py  ibm_backend.py  main.py  metrics.py  models.py  public_artifacts.py  viz.py  weak_measurement.py
tests/: test_basic.py  test_sanity.py  test_theory_limits.py
